# tick2ohlc

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample.csv  tick2ohlc.py
