[tool.poetry]
name = "tick2ohlc"
version = "0.1.0"
description = "Convert tick CSV files to OHLC bars"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
