[tool.poetry]
name = "tick2ohlc"
version = "0.1.0"
description = "Convert tick CSV files to OHLC bars"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.2.1"
mypy = "^0.790"
black = "^20.8b1"
pylint = "^2.6.0"
rope = "^0.18.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
